--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ netaddr==1.3.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyrad==2.4
+python-dotenv==1.0.1
 python-multipart==0.0.12
 six==1.16.0
 sniffio==1.3.1
